cabal-version:      3.4
name:               algo-method-template
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             TANIGUCHI Kohei
build-type:         Simple

common common
    ghc-options: -Wall
    default-language: Haskell2010
    build-depends:    base

library
    import:           common
    exposed-modules:  Main

test-suite algo-method-template-test
    import:           common
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:
        algo-method-template
